--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-search-input": "^0.11.3",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
   },
